--- a/styles/components/pagesection.scss
+++ b/styles/components/pagesection.scss
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 550px) {
   .page-section {
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
     padding: 0;
   }
