Adjustments to responsive styling

--- a/styles/components/_index.scss
+++ b/styles/components/_index.scss
@@ -1,7 +1,9 @@
 @import "./button.scss";
+@import "./contact.scss";
 @import "./headerbar.scss";
 @import "./introduction.scss";
 @import "./mainlogo.scss";
 @import "./page.scss";
 @import "./pagesection.scss";
 @import "./textroller.scss";
+@import "./therapies.scss";
