--- a/styles/components/mainlogo.scss
+++ b/styles/components/mainlogo.scss
@@ -14,6 +14,7 @@
   &__title {
     bottom: 0;
     display: flex;
+    font-family: $font-playfair;
     font-size: 30px;
     justify-content: center;
     position: absolute;
@@ -98,5 +99,13 @@
     -moz-transform: translateX(0%);
     -ms-transform: translateX(0%);
     -o-transform: translateX(0%);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .main-logo {
+    &__title {
+      font-size: 20px;
+    }
   }
 }
