--- a/styles/components/pagesection.scss
+++ b/styles/components/pagesection.scss
@@ -1,8 +1,8 @@
 .page-section {
   min-height: 100vh;
   overflow: hidden;
-  padding: 0 30px;
-  //   width: 100%;
+  padding: 0;
+  width: 100%;
   &--main-logo {
     display: flex;
   }
