--- a/styles/general.scss
+++ b/styles/general.scss
@@ -1,4 +1,71 @@
 body {
+  color: $white;
+  font-family: $font-montserrat;
+  font-size: 20px;
   margin: 0;
   overflow-x: hidden;
+}
+
+.page-section__container {
+  background-color: $dark-bg;
+  border-radius: 35px 0 35px 0;
+  filter: drop-shadow(0px 5px 10px black);
+}
+
+.header {
+  font-size: 35px;
+}
+
+.text__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+}
+
+.text__section {
+  max-width: 380px;
+}
+
+.text__fader {
+  font-style: italic;
+  margin: 20px 0;
+  /* Transition styling */
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 1s ease-out;
+  &--show {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+a {
+  color: $white;
+}
+
+@media screen and (max-width: 1600px) {
+  body {
+    font-size: 16px;
+  }
+
+  .header {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .text__section {
+    max-width: 430px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 14px;
+  }
+
+  .header {
+    font-size: 25px;
+  }
 }
