--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 
+/* Fonts */
 $font-montserrat: "Montserrat", sans-serif;
 $font-playfair: "Playfair Display", serif;
+
+$font-header: 30px;
+
+/* Colors */
+
+$dark-bg: rgba(0, 0, 0, 0.486);
+$white: #ffffff;
